--- a/package.json
+++ b/package.json
@@ -26,12 +26,18 @@
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
+    "axios": "^0.15.3",
     "babel-preset-stage-1": "^6.1.18",
+    "body-parser": "^1.16.0",
+    "express": "^4.14.1",
     "lodash": "^3.10.1",
+    "morgan": "^1.8.0",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.0",
     "react-router": "^2.0.1",
-    "redux": "^3.0.4"
+    "redux": "^3.0.4",
+    "redux-form": "^6.5.0",
+    "redux-promise": "^0.5.3"
   }
 }
