--- a/package.json
+++ b/package.json
@@ -34,10 +34,11 @@
     "morgan": "^1.8.0",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
+    "react-materialize": "^0.18.1",
     "react-redux": "^4.0.0",
     "react-router": "^2.0.1",
     "redux": "^3.0.4",
-    "redux-form": "^6.5.0",
+    "redux-form": "^4.1.3",
     "redux-promise": "^0.5.3"
   }
 }
