--- a/package.json
+++ b/package.json
@@ -26,19 +26,26 @@
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
+    "async": "^2.1.5",
     "axios": "^0.15.3",
     "babel-preset-stage-1": "^6.1.18",
     "body-parser": "^1.16.0",
+    "bootstrap": "^4.0.0-alpha.6",
+    "css-loader": "^0.27.1",
     "express": "^4.14.1",
     "lodash": "^3.10.1",
     "morgan": "^1.8.0",
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3",
-    "react-materialize": "^0.18.1",
+    "react": "^0.14.8",
+    "react-addons-css-transition-group": "^15.4.2",
+    "react-addons-transition-group": "^15.4.2",
+    "react-data-grid": "^2.0.18",
+    "react-dom": "^0.14.8",
     "react-redux": "^4.0.0",
     "react-router": "^2.0.1",
+    "reactstrap": "^4.2.0",
     "redux": "^3.0.4",
     "redux-form": "^4.1.3",
-    "redux-promise": "^0.5.3"
+    "redux-promise": "^0.5.3",
+    "style-loader": "^0.13.2"
   }
 }
