--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "repository": "git@github.com:StephenGrider/ReduxSimpleStarter.git",
   "scripts": {
-    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
+    "start-dev": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
+    "postinstall": "webpack -p",
+    "start": "node index.js",
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
     "test:watch": "npm run test -- --watch"
   },
@@ -29,12 +31,13 @@
     "async": "^2.1.5",
     "axios": "^0.15.3",
     "babel-preset-stage-1": "^6.1.18",
-    "body-parser": "^1.16.0",
+    "body-parser": "^1.17.1",
     "bootstrap": "^4.0.0-alpha.6",
     "css-loader": "^0.27.1",
-    "express": "^4.14.1",
+    "express": "^4.15.2",
     "lodash": "^3.10.1",
-    "morgan": "^1.8.0",
+    "morgan": "^1.8.1",
+    "path": "^0.12.7",
     "react": "^0.14.8",
     "react-addons-css-transition-group": "^15.4.2",
     "react-addons-transition-group": "^15.4.2",
