--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "redux": "^3.0.4",
     "redux-form": "^4.1.3",
     "redux-promise": "^0.5.3",
-    "style-loader": "^0.13.2"
+    "style-loader": "^0.13.2",
+    "webpack": "^1.14.0"
   }
 }
