--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
   "dependencies": {
     "async": "^2.1.5",
     "axios": "^0.15.3",
-    "babel-core": "^6.24.0",
-    "babel-preset-stage-1": "^6.1.18",
+    "babel-core": "^6.2.1",
+    "babel-loader": "^6.2.0",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.1.18",
     "body-parser": "^1.17.1",
     "bootstrap": "^4.0.0-alpha.6",
     "css-loader": "^0.27.1",
