--- a/package.json
+++ b/package.json
@@ -45,13 +45,16 @@
     "react-addons-css-transition-group": "^15.4.2",
     "react-addons-transition-group": "^15.4.2",
     "react-data-grid": "^2.0.18",
+    "react-data-grid-addons": "^2.0.18",
     "react-dom": "^0.14.8",
     "react-redux": "^4.0.0",
     "react-router": "^2.0.1",
+    "react-spinner": "^0.2.6",
     "reactstrap": "^4.2.0",
     "redux": "^3.0.4",
     "redux-form": "^4.1.3",
     "redux-promise": "^0.5.3",
+    "spin": "0.0.1",
     "style-loader": "^0.13.2",
     "webpack": "^1.14.0"
   }
